2010-09-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-dir-status-parse-line): ignore backup
	files

2010-08-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-post-process): bugfix: don't
	replace short revision strings with nil

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-root): return nil (instead of
	signalling an error) if FILE is not inside ClearCase.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Deduce the fileset in the vtree browser

	* vc-clearcase.el (vc-clearcase-gui-vtree-browser): use
	`vc-deduce-fileset' to obtain the file(s) on which to start the
	version tree browser.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Add the view-tag and vob-tag to the vc-dir listing.

	* vc-clearcase.el (clearcase-view-tag-for-path)
	(clearcase-dir-format-extra-header)
	(vc-clearcase-dir-extra-headers): new functions.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Recognize special selection and missing files

	* vc-clearcase.el (clearcase-fprop-missing-p): new function
	(clearcase-fprop): add 'missing and 'special-selection to STATUS
	slot.
	(clearcase-set-fprop-version-stage-1): recognize "special
	selection" and missing files
	(clearcase-set-fprop-version-stage-2): only overwrite the FPROP
	STATUS when file is checked out.
	(vc-clearcase-registered): recognize special selection files.
	(vc-clearcase-state-heuristic, clearcase-default-mode-line) :
	report the MISSING state
	(vc-clearcase-what-version): report the MISSING and
	SPECIAL-SELECTION states

2010-07-18  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): 487 updated to 4.5-pre

2010-07-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* release 3.4

2010-07-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>
